--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,14 @@ authors = [
     { name = "Leonel Noan", email = "leonelndongmonoan@gmail.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "aiosqlite>=0.21.0",
+    "fastapi>=0.121.1",
+    "pydantic>=2.12.4",
+    "python-dotenv>=1.2.1",
+    "sqlalchemy>=2.0.44",
+    "uvicorn>=0.38.0",
+]
 
 [project.scripts]
 expenses-api = "expenses_api:main"
