--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "aiosqlite>=0.21.0",
     "fastapi>=0.121.1",
     "pydantic>=2.12.4",
+    "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
