--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = ">=3.12"
 dependencies = [
+    "fastapi[standard]",
     "aiosqlite>=0.21.0",
     "fastapi>=0.121.1",
     "pydantic>=2.12.4",
