--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "python-dotenv>=1.2.1",
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
+    "faker>=38.2.0",
 ]
 
 [project.scripts]
