--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "sqlalchemy>=2.0.44",
     "uvicorn>=0.38.0",
     "faker>=38.2.0",
+    "pytest>=9.0.1",
 ]
 
 [project.scripts]
