--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ dependencies = [
     "uvicorn>=0.38.0",
     "faker>=38.2.0",
     "pytest>=9.0.1",
+    "python-jose[cryptography]>=3.5.0",
+    "passlib>=1.7.4",
+    "argon2-cffi>=25.1.0",
 ]
 
 [project.scripts]
